<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_load_image"
            android:text="@string/load_image"
            app:icon = "@drawable/ic_storage"
            android:drawablePadding="2dp"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:layout_marginTop="18dp" />

        <TextView
            android:id="@+id/tvPlaceholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:text="@string/select_an_image"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="450dp"
            android:id="@+id/imageView"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.5" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_capture_image"
            android:text="@string/take_image"
            app:icon = "@drawable/ic_camera"
            android:drawablePadding="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            android:layout_marginTop="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textview"
            android:text="@string/output"
            android:textSize="21sp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_capture_image"
            android:layout_marginStart="36dp"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_output"
            android:text="@string/result_here"
            android:textSize="21sp"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintStart_toEndOf="@id/textview"
            app:layout_constraintTop_toBottomOf="@id/btn_capture_image"
            android:layout_marginTop="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_info"
            app:layout_constraintTop_toBottomOf="@id/textview"
            android:layout_marginTop="8dp"
            android:layout_marginStart="36dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="13sp" />

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline2"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="vertical" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>